manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: "svc-99990540"
spec:
    ports:
    - port: 8080 
    selector:
        app: "99990540"
