manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "ing-99990540"
spec:
  ingressClassName: ingress-internal
  rules:
  - host: 99990540.pg-aa.kubepia.net
    http:
      paths:
      - path: /
        backend:
          service:
            name: "svc-99990540"
            port:
              number: 8080
        pathType: Prefix
